# duckbake

./: .gitignore  CHANGELOG.md  README.md  cliff.toml  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
scripts/: build-appstore.sh  release.ts  screenshots-manual.sh  screenshots.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.appstore.conf.json  tauri.conf.json
src-tauri/capabilities/: appstore.json  default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: conversations.rs  database.rs  documents.rs  import.rs  mod.rs  ollama.rs  project.rs  saved_queries.rs  vectorization.rs
src-tauri/src/models/: database.rs  document.rs  mod.rs  ollama.rs  project.rs
src-tauri/src/services/: document_parser.rs  duckdb_service.rs  file_parser.rs  mod.rs  ollama_service.rs  storage.rs
src/components/chat/: chat-input.tsx  chat-panel.tsx  code-block.tsx  data-visualization.tsx  index.ts  intent-detector.ts
src/components/database/: data-grid.tsx  index.ts  table-viewer.tsx  vectorization-dialog.tsx
src/components/documents/: document-list.tsx  document-upload-dialog.tsx  document-viewer.tsx  index.ts
src/components/import/: drop-zone.tsx  file-import-dialog.tsx  index.ts
src/components/ollama/: index.ts  ollama-model-manager.tsx  ollama-setup.tsx
src/components/query/: index.ts  sql-editor.tsx
src/components/settings/: index.ts  settings-dialog.tsx  update-banner.tsx  update-checker.tsx
src/components/ui/: button.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  error-boundary.tsx  progress.tsx  scroll-area.tsx  select.tsx  sidebar-item.tsx  theme-toggle.tsx
src/lib/: tauri.ts
src/pages/: home.tsx  index.ts  project.tsx
src/stores/: app-store.ts  chat-store.ts  document-store.ts  index.ts  project-store.ts  theme-store.ts  update-store.ts  vectorization-store.ts
src/types/: database.ts  document.ts  import.ts  index.ts  ollama.ts  project.ts
website/: Dockerfile  build.ts  bun-env.d.ts  fly.toml  package-lock.json  package.json
website/public/: robots.txt
website/scripts/: generate-favicons.ts  generate-og-image.ts  generate-tauri-icons.ts
website/src/: 404.html  404.tsx  App.tsx  index.css  index.html  index.ts  legal.tsx  privacy.html  site.webmanifest  sitemap.xml  terms.html
website/src/components/: screenshot-carousel.tsx
website/src/lib/: screenshots.ts
website/styles/: globals.css
