[package]
name = "duckbake"
version = "0.0.37"
description = "DuckDB-powered data analysis with AI"
authors = ["you"]
edition = "2021"

[lib]
name = "duckbake_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["updater"]
updater = ["dep:tauri-plugin-updater", "dep:tauri-plugin-process"]
appstore = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = { version = "2", optional = true }
tauri-plugin-process = { version = "2", optional = true }
tauri-plugin-window-state = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# DuckDB
duckdb = { version = "1.1", features = ["bundled"] }

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json", "stream"] }

# File parsing
calamine = "0.26"
csv = "1.3"

# Document parsing
pdf-extract = "0.8"
lopdf = "0.33"
zip = "2.2"
quick-xml = "0.36"
pulldown-cmark = "0.10"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
futures = "0.3"
parking_lot = "0.12"
directories = "5"
